--- a/SmartCam/SmartCam/Info.plist
+++ b/SmartCam/SmartCam/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Permission to access photo library</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Permission to access user camera</string>
 	<key>CFBundleDevelopmentRegion</key>
